--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="row">
         <div class="col-12 mainImg">
-            <a href="https://dishakiran.com/">
+            <a href="https://forms.gle/whxB2ojL5tqvgnmf6">
                 <img src="Assets/WebinarPoster.png" />
             </a>
         </div>
